# gradeste

./: EXPERIMENT_1.md  EXPERIMENT_2.md  EXPERIMENT_3.md  EXPERIMENT_4.md  EXPERIMENT_5.md  EXPERIMENT_6.md  analysis_script.py  main.py  pyproject.toml  training_grade.py
figures/: paper_generation_prompt.txt  paper_template_full.tex  results_table.tex  statistical_analysis.txt
results-exp-6-run-2/: comparison.json
results-exp-6-run-2/figures/: neurips_report.txt
results-exp-6-run-2/gumbel/: results.json
results-exp-6-run-2/gumbel/model/: adapter_config.json
results-exp-6-run-2/ppo/: results.json
results-exp-6-run-2/ppo/model/: README.md
results-exp-6-run-2/reinforce/: results.json
results-exp-6-run-2/ste/: results.json
